<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_new"
        android:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        android:icon="@drawable/ic_action_new"
        android:onClick="showAddPopup"
        android:showAsAction="ifRoom"
        android:title="@string/action_new"/>
    <item
        android:id="@+id/action_remove"
        android:icon="@drawable/ic_action_remove"
        android:onClick="toastNotYetImplemented"
        android:showAsAction="ifRoom"
        android:title="@string/action_remove"/>
    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_action_undo"
        android:onClick="toastNotYetImplemented"
        android:showAsAction="ifRoom"
        android:title="@string/action_undo"/>

</menu>