<?xml version="1.0" encoding="utf-8"?>

<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@android:id/tabhost"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
        <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:tag="tab0"
                    android:text="@string/edition"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    />
            <TextView
                    android:tag="tab1"
                    android:text="@string/navigation_trunc"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    />
            <TextView
                    android:tag="tab2"
                    android:text="@string/save"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    />
            <TextView
                    android:tag="tab3"
                    android:text="@string/open"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    />

        </TabWidget>

        <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

            <TextView
                    android:text="Hallo1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"/>
            <TextView
                    android:text="Hallo2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"/>
            <TextView
                    android:text="Hallo3"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"/>
            <TextView
                    android:text="Hallo4"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"/>

        </FrameLayout>
    </LinearLayout>
</TabHost>